--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,12 +14,18 @@ html {
  * Global layout stuff
  */
 
+
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
 }
 
+
+
+
+
 /*
- * Additional CSS can be defined below or in other CSS files, as per instructions
+ * Additional CSS can be defined below or in other CSS fil yes, as per instructions
  */
