--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,8 +20,16 @@ body {
   background-color: #f4f1ec;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+.container {
+  width: 90%;
+
+}
 
 
 
