fix the position of the double down arrow in nav.css

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,7 +17,7 @@ nav span {
   display: flex;
   flex-direction:row;
   justify-content: space-between;
-  align-items: center;
+  text-align: center;
   margin-right: 1.5em;
   margin-left: 1.5em;
   height: 100%;
@@ -25,6 +25,8 @@ nav span {
 
 .banner-title {
   margin: auto 0;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .banner-tweet {
