--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -6,6 +6,14 @@
 
 textarea {
   width: 100%;
+  height: 2em;
+  border:none;
+  background-color: #f4f1ec;
+  border-bottom: solid 3px black;
+  width: 100%;
+  outline: none;
+  font-size: 1em;
+  
   
 }
 
