--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,6 +21,7 @@ textarea {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 20px;
 
 }
 
@@ -35,3 +36,4 @@ textarea {
   display: inline-block;
   font-size: 20px;
 }
+
