add the responsive design

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,14 +18,15 @@ body {
   background-color: #f4f1ec;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 main {
   width: 90%;
+  margin: 0 auto;
 }
 
 .tweet {
@@ -33,22 +34,34 @@ main {
   border: 3px;
   border-style: solid;
 }
-
+/*
+** can create a new .css to display tweets
+*/
 article:hover {
   box-shadow: 10px 10px 8px rgba(22, 22, 22, 0.2); 
 }
 
 article.tweet header {
-  margin: 0;
+  background-color: #f4f1ec;
+  background-image: none;
+  width: 95%;
+  margin: 0 0 0 0.5em;
   height: 2em;
+  display:flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content:space-between;
 }
 
 .profile-name {
+  display:flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+}
+
+.tweetpfp {
+  width: 1.5em;
+  height: 1.5em;
 }
 
 article div {
@@ -57,7 +70,6 @@ article div {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 
 }
 
@@ -73,28 +85,35 @@ article.tweet footer {
 
 footer span i:hover {
   color: green;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 768px) {
-  #monitor{
-    width: 100%;
+  body {
+    display: flex;
     flex-direction: row;
-    justify-content:flex-start;
-    align-items:flex-start;
+    /* width: 100%; */
+    justify-content: space-around;
+    /* align-items: center; */
 
   }
   .header-content{
     width: 33.3%;
+    margin: 200px 0 0 0;
+    align-items: center;
   }
 
-  .container {
-    width: 66%;
-    float:right;
+  main {
+    width: 66.6%;
+    /* float:right; */
+    margin: 180px 10px 0 40px;
   }
-
-
 }
 
+
+/*
+** clean up the usage of "container"
+*/
 /*
  * Additional CSS can be defined below or in other CSS fil yes, as per instructions
  */
