--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -28,10 +28,13 @@ textarea {
   font-family: "Bungee";
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
 }
 
+.counter {
+  font-weight: bold;
+}
